<resources>
    <string name="app_name">未来财经</string>

    <string name="main_tab_home">首页</string>
    <string name="main_tab_fast_msg">快讯</string>
    <string name="main_tab_friend_circle">大佬圈</string>
    <string name="main_tab_mine">我的</string>

    <!--user_center-->
    <string name="history">历史</string>
    <string name="news">消息</string>
    <string name="my_news">我的消息</string>
    <string name="my_follow">我的关注</string>
    <string name="follow">关注</string>
    <string name="suggest">意见反馈</string>
    <string name="clear_cache">清除缓存</string>
    <string name="score">给未来财经评分</string>
    <string name="about_app">关于未来财经</string>
    <string name="exit">退出</string>

    <string name="home_title">未来财经</string>
    <string name="loading">加载中…</string>
    <!--共享过度动画 -->
    <string name="transition_photos">transition_animation_news_photos</string>


    <!--个人中心-->
    <string name="personal_center">个人中心</string>
    <string name="nick_name">昵称</string>
    <string name="sex">性别</string>
    <string name="personal_introductions">个人介绍</string>
    <string name="open_permissions">请前往设置中心开启照相机权限</string>
    <string name="denied_permissions">已拒绝权限</string>
    <string name="no_ask">并不再询问</string>
    <string name="yes">好</string>
    <string name="no_good">不行</string>
    <string name="functional_needs">此功能需要</string>
    <string name="permission_open">权限，否则无法正常使用，是否打开设置</string>
    <string name="has_camera_permission">已获取CAMERA权限</string>
    <string name="has_extenrnal_storage_write_external_storage_permission">已获取WRITE_EXTERNAL_STORAGE和WRITE_EXTERNAL_STORAGE权限</string>
    <string name="about_introduce_one">未来财经是集行业新闻、咨询、行情、数据等一站式区块链产业服务平台。未来财经专注于区块链行业的媒体报道，致力于打造中国区块链领域权威媒体。</string>
    <string name="about_introduce_two">未来财经目前是亿欧网、鸣金网、未央网、品途网、金评媒、砍柴网、一鸣网、金色财经、艾瑞等多家平台的专栏作者。同时也入住了今日头条、天天快报、一点资讯、UC头条、新浪财经、搜狐、百家号、雪球网等自媒体平台</string>
    <string name="take_picture">拍照</string>
    <string name="photo">相册</string>
    <string name="cancel">取消</string>
    <string name="search_hint">输入文本右侧取消变为搜索</string>

    <string name="share_success">分享成功</string>
    <string name="share_failed">分享失败</string>
    <string name="share_cancel">分享取消</string>

    <string name="uid">UID</string>
    <string name="login_privilege">登录享特权</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_one">请输入您宝贵的意见，您的意见与反馈是我们前进的动力</string>
    <string name="feedback_two">请输入您的手机号/邮箱</string>
    <string name="submit">提交</string>
    <string name="sure">确定</string>
    <string name="please_login">请先登录!</string>



    <string name="big_msg">重磅快讯</string>
    <string name="view_detail">查看详情</string>
    <string name="home_head_news">头条快讯</string>

    <string name="fans">粉丝</string>
    <string name="has_follow">已关注</string>
    <string name="please_write_your_suggest">请填写您反馈的建议</string>
    <string name="please_check_network">请检查您的网络</string>
    <string name="hot_search">热门搜索</string>
    <string name="search_history">搜索历史</string>
    <string name="search">搜索</string>
    <string name="aite_weibo">我是大佬</string>
    <string name="mogul_circle">大佬圈</string>

    <string name="search_tag_selected">已选频道</string>
    <string name="search_tag_other">点击可添加更多频道</string>
    <string name="search_tag_click">点击进入频道</string>
    <string name="search_tag_bianji">编辑</string>
    <string name="picture_preview">图片预览</string>
    <string name="copy_success">复制成功</string>
    <string name="reture">还原</string>
    <string name="copy">复制</string>
    <string name="translate">翻译</string>
    <string name="nothing_new_data">没有最新数据</string>
    <string name="nothing_more_data">没有更多数据了</string>

    <string name="home_item_comment">评论</string>
    <string name="home_item_praise">赞同</string>
    <string name="article_from">原创文章，作者：未来财经。转载需注明文章来源，违规转载追究法律责任</string>

    <string name="fastmsg_normal">最新资讯</string>
    <string name="fastmsg_big">重点快讯</string>
    <string name="fastmsg_important">重磅快讯</string>

    <string name="share_weibo_name">\&#064;</string>
    <string name="share_to_fiance">分享来自未来财经App</string>
    <string name="share_to">分享至</string>
    <string name="you_follow">您关注了</string>
    <string name="you_cancel">您取消了对</string>
    <string name="de_follow">的关注</string>
    <string name="mogul_search">大佬圈搜索</string>

    <string name="load_failed_tip">哎呀，您访问的页面丢失了~</string>
    <string name="load_refresh">刷新</string>
    <string name="load_no_data">暂无数据~</string>

    <string name="manage_tip">拖拽以排序</string>
    <string name="only_once">半小时内只能提交一次</string>
    <string name="again_exit">再按一次退出程序</string>
    <string name="exit_yes">是</string>
    <string name="exit_no">否</string>
    <string name="exit_login">确定退出登录？</string>
    <string name="sure_clear_memory">确认清除缓存？</string>
    <string name="sure_clear_history">确定清除全部历史记录？</string>
    <string name="please_enter_keyword">请输入关键字!</string>
    <string name="come_from_finance">未来财经</string>
    <string name="via_finance">Via:未来财经</string>
    <string name="title_manage_tag">频道编辑</string>
    <string name="please_browse_the_article">您还没有去浏览文章！</string>
    <string name="no_app_store">您没有安装应用市场</string>

    <string name="str_fastmsg_content">【%1$s】</string>

</resources>
