<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mine_background"
    android:orientation="vertical">

    <com.sharechain.finance.view.BounceScrollView
        android:layout_width="384dp"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/center_ll"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:background="@drawable/mine_item_touch_bg"
                    android:gravity="center"

                    android:orientation="vertical"
                    android:paddingLeft="15dp">

                    <ImageView
                        android:id="@+id/user_image"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_alignParentLeft="true"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/user_image"
                        android:text="未来财经"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:background="@color/white"
                    android:gravity="center"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/right_dir" />
                </LinearLayout>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/history_tv"
                    style="@style/user_item_style"
                    android:drawableLeft="@drawable/user"
                    android:text="@string/history" />

                <TextView style="@style/user_list_line_horizontal" />

                <TextView
                    android:id="@+id/my_news_tv"
                    style="@style/user_item_style"
                    android:drawableLeft="@drawable/user"
                    android:text="@string/my_news" />

                <TextView style="@style/user_list_line_horizontal" />

                <TextView
                    android:id="@+id/my_follow_tv"
                    style="@style/user_item_style"
                    android:drawableLeft="@drawable/user"
                    android:text="@string/my_follow" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@color/mine_background" />

                <TextView
                    android:id="@+id/suggest_tv"
                    style="@style/user_item_style"
                    android:drawableLeft="@drawable/user"
                    android:text="@string/suggest" />

                <TextView style="@style/user_list_line_horizontal" />

                <TextView
                    android:id="@+id/clear_cache_tv"
                    style="@style/user_item_style"
                    android:drawableLeft="@drawable/user"
                    android:text="@string/clear_cache" />

                <TextView style="@style/user_list_line_horizontal" />

                <TextView
                    android:id="@+id/score_tv"
                    style="@style/user_item_style"
                    android:drawableLeft="@drawable/user"
                    android:text="@string/score" />

                <TextView style="@style/user_list_line_horizontal" />

                <TextView
                    android:id="@+id/about_tv"
                    style="@style/user_item_style"
                    android:layout_marginBottom="30dp"
                    android:drawableLeft="@drawable/user"
                    android:text="@string/about_app" />

                <TextView style="@style/user_list_line_horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/exit_tv"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/mine_item_touch_bg"
                        android:gravity="center"
                        android:text="@string/exit"
                        android:textColor="@color/colorBlack"
                        android:textSize="18dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@color/mine_background" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </com.sharechain.finance.view.BounceScrollView>
</android.support.constraint.ConstraintLayout>