<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    android:paddingTop="19dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_tag_selected"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_manage_tip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_weight="1"
            android:text="@string/search_tag_click"
            android:textColor="@color/color_7c7c7c"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/text_bianji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="6dp"
            android:text="@string/search_tag_bianji"
            android:textColor="#3176ff"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/image_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="6dp"
            android:paddingRight="15dp"
            android:src="@drawable/delete"
            android:visibility="gone" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:alpha="0.2"
        android:background="@color/color_999999" />

</LinearLayout>
