<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/mine_background"
    android:gravity="bottom"
    android:orientation="vertical"
    android:id="@+id/relativeLayout">


    <Button
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/dialog_take_photo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/mine_item_touch_bg"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:gravity="center"
        android:text="@string/take_picture"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/dialog_choose_phote"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/mine_item_touch_bg"
        android:gravity="center"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/photo"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_creator="@+id/dialog_take_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_creator="@+id/dialog_choose_phote"
        android:id="@+id/dialog_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/mine_item_touch_bg"
        android:gravity="center"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/cancel"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
         />

</android.support.constraint.ConstraintLayout>