<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zhy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/base_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_tag_selected"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_weight="1"
            android:text="@string/search_tag_click"
            android:textColor="@color/color_7c7c7c"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/text_bianji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="6dp"
            android:text="@string/search_tag_bianji"
            android:textColor="#3176ff"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/image_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="6dp"
            android:paddingRight="15dp"
            android:src="@drawable/delete"
            android:visibility="gone" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:alpha="0.2"
        android:background="@color/color_999999" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_selected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:overScrollMode="never" />

    <View
        android:layout_width="match_parent"
        android:layout_height="9dp"
        android:alpha="0.2"
        android:background="@color/color_999999" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="14dp"
        android:text="@string/search_tag_other"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:alpha="0.2"
        android:background="@color/color_999999" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:overScrollMode="never" />

</LinearLayout>