<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include layout="@layout/base_title" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="28dp">

            <ImageView
                android:layout_marginTop="66dp"
                android:id="@+id/logo_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/app_name"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:textSize="12sp"
                android:layout_marginTop="33dp"
                android:id="@+id/introduce_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/history"
                android:text="@string/about_introduce_one"
                android:textColor="@color/about_font" />

            <TextView
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:src="@drawable/history"
                android:text="@string/about_introduce_two"
                android:textColor="@color/about_font" />

            <TextView
                android:id="@+id/version_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:text="V1.0.0"
                android:textColor="@color/about_font" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>