<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/base_title" />


        <com.sharechain.finance.view.BounceScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/mine_background"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@color/white"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/icon_rl"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:gravity="center"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@null"
                        android:text="图像"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/icon_iv"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/history" />
                </RelativeLayout>

                <TextView style="@style/user_list_line_horizontal" />

                <TextView
                    android:id="@+id/nick_name_tv"
                    style="@style/user_item_style"
                    android:text="@string/nick_name" />


                <TextView style="@style/user_list_line_horizontal" />

                <TextView
                    android:id="@+id/sex_tv"
                    style="@style/user_item_style"
                    android:text="@string/sex" />

                <TextView style="@style/user_list_line_horizontal" />

                <TextView
                    android:id="@+id/personal_introductions_tv"
                    style="@style/user_item_style"
                    android:text="@string/personal_introductions" />

            </LinearLayout>

        </com.sharechain.finance.view.BounceScrollView>
        >

    </LinearLayout>
</android.support.constraint.ConstraintLayout>