<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_bg_color"
    android:orientation="vertical">

    <include layout="@layout/base_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/feedback_rl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/submit_btn"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/content_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:paddingBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/feedback_big_bg"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/write_feedback_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="left"
                        android:hint="@string/feedback_one"
                        android:maxLength="300"
                        android:padding="10dp"
                        android:textColor="@color/about_font"
                        android:textColorHint="@color/about_font"
                        android:textSize="15sp" />

                    <TextView
                        android:paddingRight="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:gravity="right|bottom"
                        android:hint="0/300"
                        android:textColorHint="@color/about_font"
                        android:textSize="12sp" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/phone_et"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_below="@+id/write_feedback_et"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/feedback_small"
                    android:hint="@string/feedback_two"
                    android:paddingLeft="10dp"
                    android:textColor="@color/about_font"
                    android:textColorHint="@color/about_font"
                    android:textSize="15sp" />

            </LinearLayout>

            <Button
                android:layout_marginBottom="10dp"
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/content_ll"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/feedback_sumbit"
                android:onClick="sendMessage"
                android:text="@string/submit" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>